# Model2D2V

./: CMakeLists.txt  Draw.C  test.in
include/: InputReader.h  Ion.h  Mesh.h  PhysicValues.h  Potential.h  Solver.h  Source.h  StringReader.h  TimeProfiler.h  help.h
src/: InputReader.cpp  Mesh.cpp  Potential.cpp  Solver.cpp  Source.cpp  StringReader.cpp  TimerProfiler.cpp  help.cpp  main.cpp
